<resources>
    <string name="app_name">Reto1</string>

    <string name="leaderboard">Leaderboard</string>
    <string name="back">Back</string>
    <string name="share">Share it with your friends</string>
    <string name="score">Score</string>
    <string name="user">User</string>
    <string name="subject">Check this app QuizMaster</string>
    <string name="text">Try this new app about quizzes, QuizMaster</string>
    <string name="chooseApp">Choose an app</string>
    <string name="chooseToast">There is no app for that action</string>

    <string name="logout">Logout</string>
    <string name="txt_continue">Continue</string>
    <string name="correctAnswers">Number of correct answers: </string>
    <string name="txt_leaderboard">Check out our leaderboard to see where you stand!</string>

    <string name="question1">What is the capital of France?</string>
    <string name="q1_a1">London</string>
    <string name="q1_a2">Paris</string>
    <string name="q1_a3">Berlin</string>

    <string name="question2">How many continents are there on Earth?</string>
    <string name="q2_a1">Seven</string>
    <string name="q2_a2">Five</string>
    <string name="q2_a3">Ten</string>

    <string name="question3">Who wrote "Romeo and Juliet"?</string>
    <string name="q3_a1">Charles Dickens</string>
    <string name="q3_a2">Jane Austen</string>
    <string name="q3_a3">William Shakespeare</string>

    <string name="question4">What is the largest planet in our solar system?</string>
    <string name="q4_a1">Jupiter</string>
    <string name="q4_a2">Mars</string>
    <string name="q4_a3">Saturn</string>

    <string name="finish">FINISH</string>

    <string name="es">ESPAÑOL</string>
    <string name="en">ENGLISH</string>
    <string name="choose">Choose your language / Elige tu idioma</string>
    <string name="insertUsername">Insert your username:</string>
    <string name="logInButton">LOG IN</string>
    <string name="userExists">Username already exists</string>

    <string name="selectError">Select something first</string>
    <string name="emptyUsernameError">Username cannot be empty</string>
    <string name="usernameTooLongError">Username cannot be longer than 10 characters</string>
    <string name="txt_thumbnail">Take a photo and get thumbnail</string>
    <string name="txt_foto">Take a photo and save it in real size</string>
    <string name="txt_video">Start video recording</string>
    <string name="txt_video_captured">Check your gallery if you want to watch the video you just captured!</string>
    <string name="txt_photo_captured">Check your gallery if you want to watch the thumbnail you just captured!</string>

</resources>
